--- a/package.json
+++ b/package.json
@@ -1,6 +1,8 @@
 {
   "private": true,
   "dependencies": {
-    "xterm": "^4.3.0"
+    "xterm": "^4.3.0",
+    "xterm-addon-attach": "^0.4.0",
+    "xterm-addon-fit": "^0.3.0"
   }
 }
