--- a/container/Dockerfile
+++ b/container/Dockerfile
@@ -1,6 +1,6 @@
 FROM python:3.6-alpine
 
-ARG BRANCH=develop
+ARG RELEASE=develop
 
 RUN apk add --no-cache \
         man \
@@ -12,7 +12,7 @@ RUN pip install --no-cache-dir \
         requests \
         xlrd
 
-RUN pip install --no-cache-dir https://github.com/saulpw/visidata/archive/$BRANCH.zip#egg=visidata
+RUN pip install --no-cache-dir https://github.com/saulpw/visidata/archive/$RELEASE.zip#egg=visidata
 
 RUN adduser -D visidata
 USER visidata
