--- a/frontend/Makefile
+++ b/frontend/Makefile
@@ -1,6 +1,10 @@
 SHELL := /bin/bash -euo pipefail
 
 
+build:
+	# noop
+
+
 vendored_node_modules := \
 	node_modules/xterm/lib/xterm.js \
 	node_modules/xterm/lib/xterm.js.map \
@@ -10,8 +14,10 @@ vendored_node_modules := \
 	node_modules/xterm-addon-fit/lib/xterm-addon-fit.js \
 	node_modules/xterm-addon-fit/lib/xterm-addon-fit.js.map
 
-build:
+vendor:
 	npm ci
 	mkdir -p vendor
 	cp -v $(vendored_node_modules) vendor/
 	rm -rf node_modules
+
+.PHONY: vendor
