--- a/container/Dockerfile
+++ b/container/Dockerfile
@@ -3,6 +3,7 @@ FROM python:3.6-alpine
 ARG RELEASE=develop
 
 RUN apk add --no-cache \
+        bash \
         man \
         less
 
@@ -15,11 +16,11 @@ RUN pip install --no-cache-dir \
 RUN pip install --no-cache-dir https://github.com/saulpw/visidata/archive/$RELEASE.zip#egg=visidata
 
 RUN adduser -D visidata
-USER visidata
 WORKDIR /home/visidata
 
 COPY visidatarc .visidatarc
+RUN chown -R visidata:visidata .
 
 ENV PAGER="less -SRFX"
-
+USER visidata
 ENTRYPOINT ["vd"]
