--- a/container/Dockerfile
+++ b/container/Dockerfile
@@ -11,17 +11,26 @@ RUN pip install --no-cache-dir \
         openpyxl \
         python-dateutil \
         requests \
+        s3fs \
         xlrd
 
 RUN pip install --no-cache-dir https://github.com/saulpw/visidata/archive/$RELEASE.zip#egg=visidata
 
 RUN adduser -D visidata
-WORKDIR /home/visidata
 
-# XXX FIXME: never gets used because /home/visidata is overlayed with tmpfs by backend server
-COPY visidatarc .visidatarc
-RUN chown -R visidata:visidata .
+# /home/visidata will be mounted as a tmpfs in each container, so locate the
+# typical ~/.visidata dir and ~/.visidatarc file in /etc instead.
+COPY visidata /etc/visidata
+COPY visidatarc /etc/visidatarc
+
+# Install plugins
+ADD https://raw.githubusercontent.com/ajkerrigan/visidata-plugins/1f0ff2a8610a1f5f6ffe56634688e60d21b72728/plugins/vds3.py \
+    /etc/visidata/plugins/
+
+RUN chown -R visidata:visidata /etc/visidata /etc/visidatarc
 
 ENV PAGER="less -SRFX"
+
 USER visidata
-ENTRYPOINT ["vd"]
+WORKDIR /home/visidata
+ENTRYPOINT ["vd", "--visidata-dir=/etc/visidata", "--config=/etc/visidatarc", "--quitguard"]
