--- a/container/Dockerfile
+++ b/container/Dockerfile
@@ -18,8 +18,9 @@ RUN pip install --no-cache-dir https://github.com/saulpw/visidata/archive/$RELEA
 
 RUN adduser -D visidata
 
-# /home/visidata will be mounted as a tmpfs in each container, so locate the
-# typical ~/.visidata dir and ~/.visidatarc file in /etc instead.
+# /home/visidata will be overlayed as a tmpfs in each container, so anything we
+# put there in the image won't actually be available.  Instead, locate the
+# typical ~/.visidata/ dir and ~/.visidatarc file in /etc.
 COPY visidata /etc/visidata
 COPY visidatarc /etc/visidatarc
 
@@ -27,7 +28,11 @@ COPY visidatarc /etc/visidatarc
 ADD https://raw.githubusercontent.com/ajkerrigan/visidata-plugins/1f0ff2a8610a1f5f6ffe56634688e60d21b72728/plugins/vds3.py \
     /etc/visidata/plugins/
 
-RUN chown -R visidata:visidata /etc/visidata /etc/visidatarc
+# Need a writable cache dir
+RUN mkdir -p /tmp/visidata-cache \
+ && ln -svnf /tmp/visidata-cache /etc/visidata/cache
+
+RUN chown -R visidata:visidata /etc/visidata /etc/visidatarc /tmp/visidata-cache
 
 ENV PAGER="less -SRFX"
 
