Alpine 3.11 → 3.12 switched package name from "man" to "mandoc"

--- a/container/Dockerfile
+++ b/container/Dockerfile
@@ -4,7 +4,7 @@ ARG RELEASE=develop
 
 RUN apk add --no-cache \
         bash \
-        man \
+        mandoc \
         less
 
 RUN pip install --no-cache-dir \
